Großschrift und deprecated (#150)
* Großschrift und deprecated

* Einige equals müssen angepasst werden

* auch equals bei personenart

* startWith auf großschrift

* "case insensitive"

* equalsIgnoreCase

* Change List to ArrayList